--- a/client/package.json
+++ b/client/package.json
@@ -7,10 +7,12 @@
 		"@testing-library/react": "^9.5.0",
 		"@testing-library/user-event": "^7.2.1",
 		"bootstrap": "^4.5.0",
+		"bootstrap-less": "^3.3.8",
 		"holderjs": "^2.9.7",
 		"react": "^16.13.1",
 		"react-bootstrap": "^1.0.1",
 		"react-dom": "^16.13.1",
+		"react-js-pagination": "^3.0.3",
 		"react-router-dom": "^5.2.0",
 		"react-scripts": "3.4.1"
 	},
@@ -34,5 +36,6 @@
 			"last 1 firefox version",
 			"last 1 safari version"
 		]
-	}
+	},
+	"proxy": "http://localhost:5000"
 }
