--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,7 @@
 		"@testing-library/user-event": "^7.2.1",
 		"bootstrap": "^4.5.0",
 		"bootstrap-less": "^3.3.8",
+		"fs": "0.0.1-security",
 		"holderjs": "^2.9.7",
 		"react": "^16.13.1",
 		"react-bootstrap": "^1.0.1",
