--- a/server/package.json
+++ b/server/package.json
@@ -9,6 +9,7 @@
   "author": "Noumaan Khatib",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.0.0",
     "chai": "^4.2.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
